--- a/baizhi_jw_sys/pom.xml
+++ b/baizhi_jw_sys/pom.xml
@@ -20,5 +20,19 @@
     </dependencies>
     <build>
         <finalName>baizhi_jw_sys</finalName>
+        <plugins>
+            <!-- mybatis逆向工程 -->
+            <plugin>
+                <groupId>org.mybatis.generator</groupId>
+                <artifactId>mybatis-generator-maven-plugin</artifactId>
+                <version>1.3.2</version>
+                <configuration>
+                    <!--配置文件的位置-->
+                    <configurationFile>src/main/resources/Personal-GeneratorConfig.xml</configurationFile>
+                    <verbose>true</verbose>
+                    <overwrite>true</overwrite>
+                </configuration>
+            </plugin>
+        </plugins>
     </build>
 </project>
